--- a/data/index.html
+++ b/data/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IoT Base Home Automation</title>
+	<meta name="viewport" content="initial-scale=1.0, width=device-width" />
+	<meta name="theme-color" content="#1e1e1e" />
+    <title>IoT Based Home Automation</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
